Use Google Truth for assertions