@@ -1,5 +1,6 @@
 package net.greghaines.jesque.meta.dao.impl;
 
+import static com.google.common.truth.Truth.assertThat;
 import static org.mockito.Mockito.*;
 
 import java.util.Arrays;
@@ -11,7 +12,6 @@ import net.greghaines.jesque.Config;
 import net.greghaines.jesque.meta.KeyInfo;
 import net.greghaines.jesque.meta.KeyType;
 import net.greghaines.jesque.meta.dao.impl.KeysDAORedisImpl.KeyDAOWork;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -46,21 +46,14 @@ public class TestKeysDAORedisImpl {
     final String infoString = "foo:bar\r\n# CPU\r\nbaz\r\nqux";
     when(this.jedisPool.info()).thenReturn(infoString);
     final Map<String, String> redisInfo = this.keysDAO.getRedisInfo();
-    Assert.assertNotNull(redisInfo);
-    Assert.assertEquals(3, redisInfo.size());
-    Assert.assertTrue(redisInfo.containsKey("foo"));
-    Assert.assertEquals("bar", redisInfo.get("foo"));
-    Assert.assertTrue(redisInfo.containsKey("baz"));
-    Assert.assertNull(redisInfo.get("baz"));
-    Assert.assertTrue(redisInfo.containsKey("qux"));
-    Assert.assertNull(redisInfo.get("qux"));
+    assertThat(redisInfo).containsExactly("foo", "bar", "baz", null, "qux", null);
   }
 
   @Test
   public void testGetKeyInfos() throws Exception {
-    final Set<String> keys = new LinkedHashSet<String>(Arrays.asList("resque:bar", "resque:qux"));
-    final List<String> keyNames = Arrays.asList("bar", "qux");
-    final List<String> values = Arrays.asList("bazqux", "abc123456");
+    final Set<String> keys = Set.of("resque:bar", "resque:qux");
+    final List<String> keyNames = List.of("bar", "qux");
+    final List<String> values = List.of("bazqux", "abc123456");
     when(this.jedisPool.keys("resque:*")).thenReturn(keys);
     int idx = 0;
     for (final String key : keys) {
@@ -68,16 +61,16 @@ public class TestKeysDAORedisImpl {
       when(this.jedisPool.strlen(key)).thenReturn((long) values.get(idx++).length());
     }
     final List<KeyInfo> keyInfos = this.keysDAO.getKeyInfos();
-    Assert.assertNotNull(keyInfos);
-    Assert.assertEquals(2, keyInfos.size());
+    assertThat(keyInfos).isNotNull();
+    assertThat(keyInfos).hasSize(2);
     int i = 0;
     for (final KeyInfo keyInfo : keyInfos) {
-      Assert.assertEquals("resque", keyInfo.getNamespace());
-      Assert.assertEquals(keyNames.get(i), keyInfo.getName());
-      Assert.assertEquals(KeyType.STRING, keyInfo.getType());
+      assertThat(keyInfo.getNamespace()).isEqualTo("resque");
+      assertThat(keyInfo.getName()).isEqualTo(keyNames.get(i));
+      assertThat(keyInfo.getType()).isEqualTo(KeyType.STRING);
       final long size = values.get(i++).length();
-      Assert.assertEquals((Long) size, keyInfo.getSize());
-      Assert.assertNull(keyInfo.getArrayValue());
+      assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+      assertThat(keyInfo.getArrayValue()).isNull();
     }
   }
 
@@ -89,12 +82,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.STRING.toString());
     when(this.jedisPool.strlen(key)).thenReturn(size);
     final KeyInfo keyInfo = this.keysDAO.getKeyInfo(key);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.STRING, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.STRING);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
@@ -106,14 +99,14 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.strlen(key)).thenReturn(size);
     when(this.jedisPool.get(key)).thenReturn(value);
     final KeyInfo keyInfo = this.keysDAO.getKeyInfo(key, 0, 1);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.STRING, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertEquals(value, keyInfo.getArrayValue().get(0));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.STRING);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).hasSize(1);
+    assertThat(keyInfo.getArrayValue().get(0)).isEqualTo(value);
   }
 
   @Test
@@ -125,12 +118,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.STRING.toString());
     when(this.jedisPool.strlen(key)).thenReturn(size);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.STRING, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.STRING);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
@@ -143,14 +136,14 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.strlen(key)).thenReturn(size);
     when(this.jedisPool.get(key)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.STRING, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertEquals(value, keyInfo.getArrayValue().get(0));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.STRING);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).hasSize(1);
+    assertThat(keyInfo.getArrayValue().get(0)).isEqualTo(value);
   }
 
   @Test
@@ -161,18 +154,18 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.ZSET.toString());
     when(this.jedisPool.zcard(key)).thenReturn(size);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.ZSET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.ZSET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
   public void testDoWork_HandleZSet_ArrayValue() throws Exception {
     final String key = "foo:bar";
-    final List<String> value = Arrays.asList("foo", "bar", "baz");
+    final List<String> value = List.of("foo", "bar", "baz");
     final long size = 8;
     final int offset = 1;
     final int count = value.size();
@@ -181,14 +174,14 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.zcard(key)).thenReturn(size);
     when(this.jedisPool.zrange(key, offset, offset + count)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.ZSET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(count, keyInfo.getArrayValue().size());
-    Assert.assertTrue(value.containsAll(keyInfo.getArrayValue()));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.ZSET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).hasSize(count);
+    assertThat(keyInfo.getArrayValue()).containsExactlyElementsIn(value);
   }
 
   @Test
@@ -199,12 +192,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.SET.toString());
     when(this.jedisPool.scard(key)).thenReturn(size);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.SET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.SET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
@@ -219,20 +212,20 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.scard(key)).thenReturn(size);
     when(this.jedisPool.smembers(key)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.SET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertTrue(keyInfo.getArrayValue().contains("foo"));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.SET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).hasSize(1);
+    assertThat(keyInfo.getArrayValue()).contains("foo");
   }
 
   @Test
   public void testDoWork_HandleSet_ArrayValue_TooBig() throws Exception {
     final String key = "foo:bar";
-    final Set<String> value = new LinkedHashSet<String>(Arrays.asList("foo", "bar", "baz"));
+    final Set<String> value = Set.of("foo", "bar", "baz");
     final long size = value.size();
     final int offset = value.size() + 1;
     final int count = value.size();
@@ -241,18 +234,19 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.scard(key)).thenReturn(size);
     when(this.jedisPool.smembers(key)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.SET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertTrue(keyInfo.getArrayValue().isEmpty());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.SET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).isEmpty();
   }
 
   @Test
   public void testDoWork_HandleSet_ArrayValue_OverEnd() throws Exception {
     final String key = "foo:bar";
+    // Need to retain order for this test
     final Set<String> value = new LinkedHashSet<String>(Arrays.asList("foo", "bar", "baz"));
     final long size = value.size();
     final int offset = value.size() - 1;
@@ -262,14 +256,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.scard(key)).thenReturn(size);
     when(this.jedisPool.smembers(key)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.SET, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertTrue(keyInfo.getArrayValue().contains("baz"));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.SET);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).containsExactly("baz");
   }
 
   @Test
@@ -280,12 +272,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.HASH.toString());
     when(this.jedisPool.hlen(key)).thenReturn(size);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.HASH, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.HASH);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
@@ -302,14 +294,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.hkeys(key)).thenReturn(valueKeys);
     when(this.jedisPool.hmget(key, "foo")).thenReturn(valueValues);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.HASH, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertTrue(keyInfo.getArrayValue().contains("{foo=123}"));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.HASH);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).containsExactly("{foo=123}");
   }
 
   @Test
@@ -324,13 +314,13 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.hlen(key)).thenReturn(size);
     when(this.jedisPool.hkeys(key)).thenReturn(valueKeys);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.HASH, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertTrue(keyInfo.getArrayValue().isEmpty());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.HASH);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).isEmpty();
   }
 
   @Test
@@ -347,14 +337,12 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.hkeys(key)).thenReturn(valueKeys);
     when(this.jedisPool.hmget(key, "baz")).thenReturn(valueValues);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.HASH, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(1, keyInfo.getArrayValue().size());
-    Assert.assertTrue(keyInfo.getArrayValue().contains("{baz=789}"));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.HASH);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).containsExactly("{baz=789}");
   }
 
   @Test
@@ -365,18 +353,18 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.type(key)).thenReturn(KeyType.LIST.toString());
     when(this.jedisPool.llen(key)).thenReturn(size);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.LIST, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNull(keyInfo.getArrayValue());
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.LIST);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNull();
   }
 
   @Test
   public void testDoWork_HandleList_ArrayValue() throws Exception {
     final String key = "foo:bar";
-    final List<String> value = Arrays.asList("foo", "bar", "baz");
+    final List<String> value = List.of("foo", "bar", "baz");
     final long size = 8;
     final int offset = 1;
     final int count = value.size();
@@ -385,14 +373,14 @@ public class TestKeysDAORedisImpl {
     when(this.jedisPool.llen(key)).thenReturn(size);
     when(this.jedisPool.lrange(key, offset, offset + count)).thenReturn(value);
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNotNull(keyInfo);
-    Assert.assertEquals("foo", keyInfo.getNamespace());
-    Assert.assertEquals("bar", keyInfo.getName());
-    Assert.assertEquals(KeyType.LIST, keyInfo.getType());
-    Assert.assertEquals((Long) size, keyInfo.getSize());
-    Assert.assertNotNull(keyInfo.getArrayValue());
-    Assert.assertEquals(count, keyInfo.getArrayValue().size());
-    Assert.assertTrue(value.containsAll(keyInfo.getArrayValue()));
+    assertThat(keyInfo).isNotNull();
+    assertThat(keyInfo.getNamespace()).isEqualTo("foo");
+    assertThat(keyInfo.getName()).isEqualTo("bar");
+    assertThat(keyInfo.getType()).isEqualTo(KeyType.LIST);
+    assertThat(keyInfo.getSize()).isEqualTo((Long) size);
+    assertThat(keyInfo.getArrayValue()).isNotNull();
+    assertThat(keyInfo.getArrayValue()).hasSize(count);
+    assertThat(keyInfo.getArrayValue()).containsAtLeastElementsIn(value);
   }
 
   @Test
@@ -401,7 +389,7 @@ public class TestKeysDAORedisImpl {
     final KeyDAOWork work = new KeyDAOWork(key);
     when(this.jedisPool.type(key)).thenReturn("?");
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNull(keyInfo);
+    assertThat(keyInfo).isNull();
   }
 
   @Test
@@ -410,6 +398,6 @@ public class TestKeysDAORedisImpl {
     final KeyDAOWork work = new KeyDAOWork(key);
     when(this.jedisPool.type(key)).thenReturn(KeyType.NONE.toString());
     final KeyInfo keyInfo = work.doWork(this.jedisPool);
-    Assert.assertNull(keyInfo);
+    assertThat(keyInfo).isNull();
   }
 }
