@@ -1,5 +1,6 @@
 package net.greghaines.jesque.meta.dao.impl;
 
+import static com.google.common.truth.Truth.assertThat;
 import static net.greghaines.jesque.Config.Builder.DEFAULT_NAMESPACE;
 import static net.greghaines.jesque.utils.ResqueConstants.COLON;
 import static net.greghaines.jesque.utils.ResqueConstants.QUEUES;
@@ -7,10 +8,7 @@ import static org.mockito.Mockito.*;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -20,7 +18,6 @@ import net.greghaines.jesque.Job;
 import net.greghaines.jesque.json.ObjectMapperFactory;
 import net.greghaines.jesque.meta.KeyType;
 import net.greghaines.jesque.meta.QueueInfo;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -55,25 +52,19 @@ public class TestQueueInfoDAORedisImpl {
 
   @Test
   public void testGetQueueNames() {
-    final Set<String> queueSet = new HashSet<String>(Arrays.asList("queue1", "queue2"));
-    final List<String> origQueueNames = new ArrayList<String>(queueSet);
+    final Set<String> queueSet = Set.of("queue1", "queue2");
+    final List<String> origQueueNames = new ArrayList<>(queueSet);
     Collections.sort(origQueueNames);
     when(this.jedisPool.smembers(QUEUES_KEY)).thenReturn(queueSet);
     final List<String> queueNames = this.qInfoDAO.getQueueNames();
-    Assert.assertNotNull(queueNames);
-    Assert.assertEquals(queueSet.size(), queueNames.size());
-    Assert.assertTrue(queueNames.containsAll(queueSet));
-    Assert.assertEquals(origQueueNames, queueNames);
+    assertThat(queueNames).isEqualTo(origQueueNames);
   }
 
   @Test
   public void testGetPendingCount() {
-    final Map<String, Long> queueCountMap = new HashMap<String, Long>(2);
-    queueCountMap.put("queue1", 3L);
-    queueCountMap.put("queue2", 5L);
-    final Map<String, String> queueTypeMap = new HashMap<String, String>(2);
-    queueTypeMap.put("queue1", KeyType.LIST.toString());
-    queueTypeMap.put("queue2", KeyType.ZSET.toString());
+    final Map<String, Long> queueCountMap = Map.of("queue1", 3L, "queue2", 5L);
+    final Map<String, String> queueTypeMap =
+        Map.of("queue1", KeyType.LIST.toString(), "queue2", KeyType.ZSET.toString());
     when(this.jedisPool.smembers(QUEUES_KEY)).thenReturn(queueCountMap.keySet());
     for (final Entry<String, String> e : queueTypeMap.entrySet()) {
       final String queueKey = "resque:queue:" + e.getKey();
@@ -85,7 +76,7 @@ public class TestQueueInfoDAORedisImpl {
       }
     }
     final long pendingCount = this.qInfoDAO.getPendingCount();
-    Assert.assertEquals(8, pendingCount);
+    assertThat(pendingCount).isEqualTo(8);
   }
 
   @Test
@@ -93,14 +84,14 @@ public class TestQueueInfoDAORedisImpl {
     final Long count = 5L;
     when(this.jedisPool.get("resque:stat:processed")).thenReturn(Long.toString(count));
     final long processedCount = this.qInfoDAO.getProcessedCount();
-    Assert.assertEquals(count, (Long) processedCount);
+    assertThat(processedCount).isEqualTo(count);
   }
 
   @Test
   public void testGetProcessedCount_Null() {
     when(this.jedisPool.get("resque:stat:processed")).thenReturn(null);
     final long processedCount = this.qInfoDAO.getProcessedCount();
-    Assert.assertEquals(0L, processedCount);
+    assertThat(processedCount).isEqualTo(0L);
   }
 
   @Test
@@ -113,12 +104,9 @@ public class TestQueueInfoDAORedisImpl {
 
   @Test
   public void testGetQueueInfos() {
-    final Map<String, Long> queueCountMap = new HashMap<String, Long>(2);
-    queueCountMap.put("queue1", 3L);
-    queueCountMap.put("queue2", 5L);
-    final Map<String, String> queueTypeMap = new HashMap<String, String>(2);
-    queueTypeMap.put("queue1", KeyType.LIST.toString());
-    queueTypeMap.put("queue2", KeyType.ZSET.toString());
+    final Map<String, Long> queueCountMap = Map.of("queue1", 3L, "queue2", 5L);
+    final Map<String, String> queueTypeMap =
+        Map.of("queue1", KeyType.LIST.toString(), "queue2", KeyType.ZSET.toString());
     when(this.jedisPool.smembers(QUEUES_KEY)).thenReturn(queueCountMap.keySet());
     for (final Entry<String, String> e : queueTypeMap.entrySet()) {
       final String queueKey = "resque:queue:" + e.getKey();
@@ -131,11 +119,10 @@ public class TestQueueInfoDAORedisImpl {
       }
     }
     final List<QueueInfo> queueInfos = this.qInfoDAO.getQueueInfos();
-    Assert.assertNotNull(queueInfos);
-    Assert.assertEquals(queueCountMap.size(), queueInfos.size());
+    assertThat(queueInfos).hasSize(queueCountMap.size());
     for (final QueueInfo queueInfo : queueInfos) {
-      Assert.assertTrue(queueCountMap.containsKey(queueInfo.getName()));
-      Assert.assertEquals(queueCountMap.get(queueInfo.getName()), queueInfo.getSize());
+      assertThat(queueCountMap).containsKey(queueInfo.getName());
+      assertThat(queueInfo.getSize()).isEqualTo(queueCountMap.get(queueInfo.getName()));
     }
     for (final Entry<String, String> e : queueTypeMap.entrySet()) {
       final String queueKey = "resque:queue:" + e.getKey();
@@ -157,12 +144,11 @@ public class TestQueueInfoDAORedisImpl {
     when(this.jedisPool.llen(queueKey)).thenReturn(size);
     when(this.jedisPool.lrange(queueKey, jobOffset, jobOffset + jobCount - 1)).thenReturn(payloads);
     final QueueInfo queueInfo = this.qInfoDAO.getQueueInfo(name, jobOffset, jobCount);
-    Assert.assertNotNull(queueInfo);
-    Assert.assertEquals(name, queueInfo.getName());
-    Assert.assertEquals((Long) size, queueInfo.getSize());
+    assertThat(queueInfo).isNotNull();
+    assertThat(queueInfo.getName()).isEqualTo(name);
+    assertThat(queueInfo.getSize()).isEqualTo(size);
     final List<Job> jobs = queueInfo.getJobs();
-    Assert.assertNotNull(jobs);
-    Assert.assertEquals(payloads.size(), jobs.size());
+    assertThat(jobs).hasSize(payloads.size());
     verify(this.jedisPool, times(3)).type(queueKey);
   }
 
@@ -182,12 +168,12 @@ public class TestQueueInfoDAORedisImpl {
     when(this.jedisPool.zrangeWithScores(queueKey, jobOffset, jobOffset + jobCount - 1))
         .thenReturn(payloads);
     final QueueInfo queueInfo = this.qInfoDAO.getQueueInfo(name, jobOffset, jobCount);
-    Assert.assertNotNull(queueInfo);
-    Assert.assertEquals(name, queueInfo.getName());
-    Assert.assertEquals((Long) size, queueInfo.getSize());
+    assertThat(queueInfo).isNotNull();
+    assertThat(queueInfo.getName()).isEqualTo(name);
+    assertThat(queueInfo.getSize()).isEqualTo(size);
     final List<Job> jobs = queueInfo.getJobs();
-    Assert.assertNotNull(jobs);
-    Assert.assertEquals(payloads.size(), jobs.size());
+    assertThat(jobs).isNotNull();
+    assertThat(jobs).hasSize(payloads.size());
     verify(this.jedisPool, times(3)).type(queueKey);
   }
 }
