@@ -1,9 +1,10 @@
 package net.greghaines.jesque.utils;
 
+import static com.google.common.truth.Truth.assertThat;
+
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import org.junit.Assert;
 import org.junit.Test;
 
 public class TestConcurrentHashSet {
@@ -12,32 +13,29 @@ public class TestConcurrentHashSet {
   public void testSingleElem() {
     final ConcurrentHashSet<String> set = new ConcurrentHashSet<>();
     final String foo = "foo";
-    Assert.assertTrue(set.isEmpty());
-    Assert.assertEquals(0, set.size());
-    Assert.assertFalse(set.contains(foo));
-    Assert.assertFalse(set.remove(foo));
+    assertThat(set).isEmpty();
+    assertThat(set).doesNotContain(foo);
+    assertThat(set.remove(foo)).isFalse();
 
-    Assert.assertTrue(set.add(foo));
-    Assert.assertFalse(set.add(foo));
-    Assert.assertFalse(set.isEmpty());
-    Assert.assertEquals(1, set.size());
-    Assert.assertTrue(set.contains(foo));
+    assertThat(set.add(foo)).isTrue();
+    assertThat(set.add(foo)).isFalse();
+    assertThat(set).hasSize(1);
+    assertThat(set).contains(foo);
 
     final Object[] arr1 = set.toArray();
-    Assert.assertNotNull(arr1);
-    Assert.assertArrayEquals(arr1, new Object[] {foo});
+    assertThat(arr1).isNotNull();
+    assertThat(arr1).isEqualTo(new Object[] {foo});
 
     final String[] arr2 = new String[set.size()];
     final String[] arr3 = set.toArray(arr2);
-    Assert.assertNotNull(arr3);
-    Assert.assertSame(arr2, arr3);
-    Assert.assertArrayEquals(arr3, new String[] {foo});
+    assertThat(arr3).isNotNull();
+    assertThat(arr3).isSameInstanceAs(arr2);
+    assertThat(arr3).isEqualTo(new String[] {foo});
 
-    Assert.assertTrue(set.remove(foo));
-    Assert.assertFalse(set.remove(foo));
-    Assert.assertTrue(set.isEmpty());
-    Assert.assertEquals(0, set.size());
-    Assert.assertFalse(set.contains(foo));
+    assertThat(set.remove(foo)).isTrue();
+    assertThat(set.remove(foo)).isFalse();
+    assertThat(set).doesNotContain(foo);
+    assertThat(set).isEmpty();
   }
 
   @Test
@@ -47,50 +45,46 @@ public class TestConcurrentHashSet {
     final String bar = "bar";
     final String baz = "baz";
     final String qux = "qux";
-    final List<String> fullList = Arrays.asList(foo, bar, baz, qux);
-    final List<String> noQux = Arrays.asList(foo, bar, baz);
-    final List<String> noFooBar = Arrays.asList(baz, qux);
+    final List<String> fullList = List.of(foo, bar, baz, qux);
+    final List<String> noQux = List.of(foo, bar, baz);
+    final List<String> noFooBar = List.of(baz, qux);
 
-    Assert.assertTrue(set.addAll(fullList));
-    Assert.assertFalse(set.addAll(noQux));
-    Assert.assertFalse(set.isEmpty());
-    Assert.assertEquals(fullList.size(), set.size());
-    Assert.assertTrue(set.containsAll(fullList));
-    Assert.assertTrue(set.contains(foo));
-    Assert.assertTrue(set.contains(bar));
-    Assert.assertTrue(set.contains(baz));
-    Assert.assertTrue(set.contains(qux));
+    assertThat(set.addAll(fullList)).isTrue();
+    assertThat(set.addAll(noQux)).isFalse();
+    assertThat(set).isNotEmpty();
+    assertThat(set).hasSize(fullList.size());
+    assertThat(set.containsAll(fullList)).isTrue();
+    assertThat(set).contains(foo);
+    assertThat(set).contains(bar);
+    assertThat(set).contains(baz);
+    assertThat(set).contains(qux);
 
     final Iterator<String> iter = set.iterator();
-    Assert.assertNotNull(iter);
+    assertThat(iter).isNotNull();
     int i = 0;
     for (final String elem : set) {
       if (elem != null) {
         i++;
       }
     }
-    Assert.assertEquals(set.size(), i);
+    assertThat(i).isEqualTo(set.size());
 
-    Assert.assertTrue(set.retainAll(noQux));
-    Assert.assertFalse(set.isEmpty());
-    Assert.assertEquals(noQux.size(), set.size());
-    Assert.assertTrue(set.containsAll(noQux));
-    Assert.assertTrue(set.contains(foo));
-    Assert.assertTrue(set.contains(bar));
-    Assert.assertTrue(set.contains(baz));
-    Assert.assertFalse(set.contains(qux));
-
-    Assert.assertTrue(set.removeAll(noFooBar));
-    Assert.assertFalse(set.isEmpty());
-    Assert.assertEquals(2, set.size());
-    Assert.assertTrue(set.contains(foo));
-    Assert.assertTrue(set.contains(bar));
-    Assert.assertFalse(set.contains(baz));
-    Assert.assertFalse(set.contains(qux));
+    assertThat(set.retainAll(noQux)).isTrue();
+    assertThat(set).hasSize(noQux.size());
+    assertThat(set).containsExactlyElementsIn(noQux);
+    assertThat(set).contains(foo);
+    assertThat(set).contains(bar);
+    assertThat(set).contains(baz);
+    assertThat(set).doesNotContain(qux);
+    assertThat(set.removeAll(noFooBar)).isTrue();
+    assertThat(set).hasSize(2);
+    assertThat(set).contains(foo);
+    assertThat(set).contains(bar);
+    assertThat(set).doesNotContain(baz);
+    assertThat(set).doesNotContain(qux);
 
     set.clear();
-    Assert.assertTrue(set.isEmpty());
-    Assert.assertEquals(0, set.size());
+    assertThat(set).isEmpty();
   }
 
   @Test(expected = IllegalArgumentException.class)
@@ -102,13 +96,13 @@ public class TestConcurrentHashSet {
   public void testCollectionConstructor() {
     final List<String> fullList = Arrays.asList("foo", "bar", "baz", "qux");
     final ConcurrentHashSet<String> set = new ConcurrentHashSet<>(fullList);
-    Assert.assertEquals(fullList.size(), set.size());
-    Assert.assertTrue(set.containsAll(fullList));
+    assertThat(set).hasSize(fullList.size());
+    assertThat(set).containsExactlyElementsIn(fullList);
   }
 
   @Test
   public void testOtherConstructors() {
-    Assert.assertNotNull(new ConcurrentHashSet<String>(4, 0.75f));
-    Assert.assertNotNull(new ConcurrentHashSet<String>(4, 0.75f, 2));
+    assertThat(new ConcurrentHashSet<String>(4, 0.75f)).isNotNull();
+    assertThat(new ConcurrentHashSet<String>(4, 0.75f, 2)).isNotNull();
   }
 }
